--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.1",
     "i": "^0.3.6",
@@ -20,6 +21,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "octokit": "^1.4.0"
